--- a/Market.csproj
+++ b/Market.csproj
@@ -63,6 +63,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MarketDBDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Phones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Phones.Designer.cs">
+      <DependentUpon>Phones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Phones.resx">
+      <DependentUpon>Phones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
