--- a/Market.csproj
+++ b/Market.csproj
@@ -140,6 +140,11 @@
     <Content Include="InitialSetup.sql" />
     <Content Include="Login&amp;Register.sql" />
     <Content Include="Phones1.sql" />
+    <Content Include="Resources\4127298.jpg" />
+    <Content Include="Resources\ai-nuclear-energy-background-future-innovation-disruptive-technology.jpg" />
+    <Content Include="Resources\maximalfocus-VT4rx775FT4-unsplash.jpg" />
+    <Content Include="Resources\ryzen9_7950x.png" />
+    <Content Include="Resources\s24ultra.png" />
     <Content Include="SQL_Scripts\Login&amp;Register.sql" />
     <Content Include="SQL_Scripts\Phones1.sql" />
     <Content Include="SQL_Scripts\SQLQuery1.sql" />
