--- a/Market.csproj
+++ b/Market.csproj
@@ -71,11 +71,6 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="MarketDBDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MarketDBDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -110,17 +105,6 @@
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="MarketDBDataSet.xsc">
-      <DependentUpon>MarketDBDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="MarketDBDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>MarketDBDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="MarketDBDataSet.xss">
-      <DependentUpon>MarketDBDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -147,6 +131,7 @@
     <Content Include="Resources\s24ultra.png" />
     <Content Include="SQL_Scripts\Login&amp;Register.sql" />
     <Content Include="SQL_Scripts\Phones1.sql" />
+    <Content Include="SQL_Scripts\phones2.sql" />
     <Content Include="SQL_Scripts\SQLQuery1.sql" />
     <None Include="Resources\login.png" />
     <Content Include="SQL_Scripts\InitialSetup.sql" />
