--- a/Market.csproj
+++ b/Market.csproj
@@ -131,6 +131,7 @@
     <Content Include="Resources\s24ultra.png" />
     <Content Include="SQL_Scripts\Final SQL Market.sql" />
     <Content Include="SQL_Scripts\Full Table without images.sql" />
+    <Content Include="SQL_Scripts\Last Image.sql" />
     <Content Include="SQL_Scripts\Login&amp;Register.sql" />
     <Content Include="SQL_Scripts\Phones1.sql" />
     <Content Include="SQL_Scripts\phones2.sql" />
